force-app/main/default/objects/AddressBook__c/AddressBook__c.object-meta.xml
<CustomObject>
    <description>Primarily stores multiple shipping and billing addresses.</description>
    <label>Address Book</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>