force-app/main/default/objects/AddressBook__c/fields/Active_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Active_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Pincode</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Addresses (Active Pincode)</relationshipLabel>
    <relationshipName>Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>