force-app/main/default/objects/AddressBook__c/fields/ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS1__c</fullName>
    <label>Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>