force-app/main/default/objects/AddressBook__c/fields/ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>