force-app/main/default/objects/AddressBook__c/fields/Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Number__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Address Number</label>
    <type>AutoNumber</type>
</CustomField>