force-app/main/default/objects/AddressBook__c/fields/Address_on_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Address_on_Lookup__c</fullName>
    <formula>ADDRESS1__c +&apos; &apos;+ ADDRESS2__c +&apos;, &apos;+ City_TMS__c +&apos;, &apos;+ State_TMS__c +&apos;, &apos;+ Country_TMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address on Lookup</label>
    <type>Text</type>
</CustomField>