force-app/main/default/objects/AddressBook__c/fields/BRANCH_CONTACT_PERSON__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_CONTACT_PERSON__c</fullName>
    <label>Person Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>