force-app/main/default/objects/AddressBook__c/fields/BVC_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Site_ID__c</fullName>
    <label>BVC Site ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>