force-app/main/default/objects/AddressBook__c/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>