force-app/main/default/objects/AddressBook__c/fields/CITY_AREA__c.field-meta.xml
<CustomField>
    <fullName>CITY_AREA__c</fullName>
    <label>City Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>