force-app/main/default/objects/AddressBook__c/fields/City_TMS__c.field-meta.xml
<CustomField>
    <fullName>City_TMS__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>