force-app/main/default/objects/AddressBook__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>