force-app/main/default/objects/AddressBook__c/fields/Country_TMS__c.field-meta.xml
<CustomField>
    <fullName>Country_TMS__c</fullName>
    <formula>Pincode_TMS__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>