force-app/main/default/objects/AddressBook__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( ISBLANK(Parent_Customer_Id__c ) , Customer__r.Name,  Customer__r.Parent.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>