force-app/main/default/objects/AddressBook__c/fields/Customer_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Name__c</fullName>
    <label>Customer Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>