force-app/main/default/objects/AddressBook__c/fields/Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Type__c</fullName>
    <label>Dealer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unregistered</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>SEZ</fullName>
            </value>
            <value>
                <fullName>SEZ Unit</fullName>
                <isActive>false</isActive>
                <label>SEZ Unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>