force-app/main/default/objects/AddressBook__c/fields/Delivery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Completed?</label>
    <type>Checkbox</type>
</CustomField>