force-app/main/default/objects/AddressBook__c/fields/Detail_Address__c.field-meta.xml
<CustomField>
    <fullName>Detail_Address__c</fullName>
    <label>Detail Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>