force-app/main/default/objects/AddressBook__c/fields/District_TMS__c.field-meta.xml
<CustomField>
    <fullName>District_TMS__c</fullName>
    <formula>Pincode_TMS__r.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>