force-app/main/default/objects/AddressBook__c/fields/EMAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ID__c</fullName>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>