force-app/main/default/objects/AddressBook__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>ADDRESS1__c +&quot;,&quot;+ ADDRESS2__c +&quot;,&quot;+  CITY__c +&quot;,&quot;+  STATE__c +&quot;,&quot;+ COUNTRY__c +&quot;,&quot;+ PINCODE__c</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>