force-app/main/default/objects/AddressBook__c/fields/GST_Registered_Status__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered_Status__c</fullName>
    <label>GST Registered Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>