force-app/main/default/objects/AddressBook__c/fields/GSTIN_Type__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_Type__c</fullName>
    <defaultValue>&quot;GSN-Individual IEC&quot;</defaultValue>
    <label>GSTIN Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN-PAN</fullName>
            </value>
            <value>
                <fullName>PSP-Passport</fullName>
            </value>
            <value>
                <fullName>TAN-TAN</fullName>
            </value>
            <value>
                <fullName>Aadhar</fullName>
                <label>ADH-Aadhar</label>
            </value>
            <value>
                <fullName>GSD-Diplomats</fullName>
            </value>
            <value>
                <fullName>GSG-Government Entities</fullName>
            </value>
            <value>
                <fullName>GSN-Individual IEC</fullName>
            </value>
            <value>
                <fullName>IEC</fullName>
                <isActive>false</isActive>
                <label>IEC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>