force-app/main/default/objects/AddressBook__c/fields/IECBRANCHSRNO__c.field-meta.xml
<CustomField>
    <fullName>IECBRANCHSRNO__c</fullName>
    <description>Mandatory for BVCI</description>
    <label>IEC Branch Sr. No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>