force-app/main/default/objects/AddressBook__c/fields/Is_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Address ?</label>
    <type>Checkbox</type>
</CustomField>