force-app/main/default/objects/AddressBook__c/fields/Is_Multiple_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multiple Address</label>
    <type>Checkbox</type>
</CustomField>