force-app/main/default/objects/AddressBook__c/fields/ISBILLINGADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ISBILLINGADDRESS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISBILLINGADDRESS</label>
    <type>Checkbox</type>
</CustomField>