force-app/main/default/objects/AddressBook__c/fields/LANDLINE_NO__c.field-meta.xml
<CustomField>
    <fullName>LANDLINE_NO__c</fullName>
    <defaultValue>&quot;+91&quot;</defaultValue>
    <label>Landline Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>