force-app/main/default/objects/AddressBook__c/fields/MOBILE1__c.field-meta.xml
<CustomField>
    <fullName>MOBILE1__c</fullName>
    <defaultValue>&quot;+91&quot;</defaultValue>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>