force-app/main/default/objects/AddressBook__c/fields/MOBILE2__c.field-meta.xml
<CustomField>
    <fullName>MOBILE2__c</fullName>
    <defaultValue>&quot;+91&quot;</defaultValue>
    <label>Alternate Mobile Number</label>
    <type>Phone</type>
</CustomField>