force-app/main/default/objects/AddressBook__c/fields/Oracle_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_Name__c</fullName>
    <label>Oracle Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>