force-app/main/default/objects/AddressBook__c/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>