force-app/main/default/objects/AddressBook__c/fields/Parent_AWS_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_AWS_Status__c</fullName>
    <formula>TEXT(Customer__r.Parent.AWS_SYNC_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent AWS Status</label>
    <type>Text</type>
</CustomField>