force-app/main/default/objects/AddressBook__c/fields/Parent_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer_Id__c</fullName>
    <formula>CASESAFEID(Customer__r.ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Customer Id</label>
    <type>Text</type>
</CustomField>