force-app/main/default/objects/AddressBook__c/fields/Parent_Customer_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer_Record_Type_Id__c</fullName>
    <formula>Customer__r.Parent.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Customer Record Type Id</label>
    <type>Text</type>
</CustomField>