force-app/main/default/objects/AddressBook__c/fields/Parent_Has_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Has_Address__c</fullName>
    <formula>Customer__r.Parent.HasAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Has Address</label>
    <type>Checkbox</type>
</CustomField>