force-app/main/default/objects/AddressBook__c/fields/Parent_Has_Registered_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Has_Registered_Account__c</fullName>
    <formula>Customer__r.Parent.HasRegisteredAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Has Registered Account</label>
    <type>Checkbox</type>
</CustomField>