force-app/main/default/objects/AddressBook__c/fields/Parent_Karzaa_KYC__c.field-meta.xml
<CustomField>
    <fullName>Parent_Karzaa_KYC__c</fullName>
    <formula>Customer__r.Parent.KARZAA_KYC_Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Karzaa KYC</label>
    <type>Checkbox</type>
</CustomField>