force-app/main/default/objects/AddressBook__c/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>People</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>