force-app/main/default/objects/AddressBook__c/fields/Pickup_Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Route Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Route__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pickup</value>
        </filterItems>
        <filterItems>
            <field>Pickup_Delivery_Route__c.Is_In_Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Addresses (Pickup Route Number)</relationshipLabel>
    <relationshipName>PickupRouteNumber</relationshipName>
    <type>Lookup</type>
</CustomField>