force-app/main/default/objects/AddressBook__c/fields/PINCODE__c.field-meta.xml
<CustomField>
    <fullName>PINCODE__c</fullName>
    <label>Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>