force-app/main/default/objects/AddressBook__c/fields/Pincode_TMS__c.field-meta.xml
<CustomField>
    <fullName>Pincode_TMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>