force-app/main/default/objects/AddressBook__c/fields/SERIAL_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SERIAL_NUMBER__c</fullName>
    <label>SERIAL_NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>