force-app/main/default/objects/AddressBook__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&quot;Manual&quot;</defaultValue>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>KARZAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>