force-app/main/default/objects/AddressBook__c/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>