force-app/main/default/objects/AddressBook__c/fields/State_TMS__c.field-meta.xml
<CustomField>
    <fullName>State_TMS__c</fullName>
    <formula>Pincode_TMS__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>