force-app/main/default/objects/AddressBook__c/fields/TRADE_NAME__c.field-meta.xml
<CustomField>
    <fullName>TRADE_NAME__c</fullName>
    <label>Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>