force-app/main/default/objects/AddressBook__c/fields/Updated_AWS_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Updated_AWS_Sync_Status__c</fullName>
    <label>Updated AWS Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>