force-app/main/default/objects/AddressBook__c/fields/Your_Address_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Your_Address_Identifier__c</fullName>
    <label>Your Address Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>