force-app/main/default/objects/AddressBook__c/recordTypes/Shipping.recordType-meta.xml
<RecordType>
    <fullName>Shipping</fullName>
    <active>true</active>
    <label>Shipping</label>
</RecordType>