force-app/main/default/objects/AddressBook__c/validationRules/Address_fields_lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_fields_lock</fullName>
    <active>true</active>
    <description>Address fields city, state, country, district and pin code are not editable once aws sync status marked as completed.</description>
    <errorConditionFormula>IF (ISPICKVAL(AWS_SYNC_Status__c ,&apos;Completed&apos;) ,
OR (ISCHANGED(CITY__c), ISCHANGED (STATE__c), ISCHANGED (COUNTRY__c), ISCHANGED (PINCODE__c), ISCHANGED(District__c)), False)</errorConditionFormula>
    <errorMessage>You cannot edit after AWS Sync Status is completed.</errorMessage>
</ValidationRule>