force-app/main/default/objects/AddressBook__c/validationRules/Alternate_mobile_number_must_contain_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternate_mobile_number_must_contain_10</fullName>
    <active>true</active>
    <errorConditionFormula>AND((LEN( MOBILE2__c ) &lt;&gt; 13), 
TEXT(Source__c)!=&apos;KARZAA&apos;, 
RecordType.Name = &apos;Billing&apos;,
NOT(CONTAINS(&quot;+91&quot;, MOBILE2__c)) )</errorConditionFormula>
    <errorDisplayField>MOBILE2__c</errorDisplayField>
    <errorMessage>Alternate Mobile Number must contain 10 digit except country code</errorMessage>
</ValidationRule>