force-app/main/default/objects/AddressBook__c/validationRules/Check_GSTIN_Contain_PAN.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_GSTIN_Contain_PAN</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND((TEXT(GST_Registered_Status__c) ==&apos;Registered&apos;),
      RecordType.Name = &apos;Billing&apos;,
      ISPICKVAL(Source__c, &apos;Manual&apos;))  , !CONTAINS(GSTIN__c , Customer__r.PAN_Number_of_Entity__c), False)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>GSTIN should contain the PAN Number of the Customer</errorMessage>
</ValidationRule>