force-app/main/default/objects/AddressBook__c/validationRules/Dealer_Type_Validation_when_GST_is_Unreg.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_Type_Validation_when_GST_is_Unreg</fullName>
    <active>true</active>
    <description>Dealer Type Validation when GST is Unregistered.</description>
    <errorConditionFormula>IF( TEXT(GST_Registered_Status__c) ==&apos;Unregistered&apos; &amp;&amp;
RecordType.Name = &apos;Billing&apos; &amp;&amp;  AND(TEXT(Dealer_Type__c)!=&apos;Unregistered&apos;,TEXT(Dealer_Type__c)!=&apos;&apos;,TEXT(Source__c)!=&apos;KARZAA&apos;),True,False)</errorConditionFormula>
    <errorDisplayField>Dealer_Type__c</errorDisplayField>
    <errorMessage>Your Customer is not GST registered. Kindly select unregistered under dealer type.</errorMessage>
</ValidationRule>