force-app/main/default/objects/AddressBook__c/validationRules/GSTIN_Must_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN_Must_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(GST_Registered_Status__c) ==&apos;Unregistered&apos;,
TEXT(Source__c)!=&apos;KARZAA&apos;,
RecordType.Name = &apos;Billing&apos;,
GSTIN__c  &lt;&gt; &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>GSTIN must be blank for the GST unregistered customer</errorMessage>
</ValidationRule>