force-app/main/default/objects/AddressBook__c/validationRules/Landline_number_must_contain_10_characte.validationRule-meta.xml
<ValidationRule>
    <fullName>Landline_number_must_contain_10_characte</fullName>
    <active>true</active>
    <errorConditionFormula>AND((LEN(LANDLINE_NO__c) &lt;&gt; 13),
     TEXT(Source__c)!=&apos;KARZAA&apos;,
     NOT(CONTAINS(&quot;+91&quot;, LANDLINE_NO__c)) )</errorConditionFormula>
    <errorDisplayField>LANDLINE_NO__c</errorDisplayField>
    <errorMessage>Landline Number must contain 10 digit except country code</errorMessage>
</ValidationRule>