force-app/main/default/objects/AddressBook__c/validationRules/Mobile_number_must_contain_10_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_number_must_contain_10_characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND((LEN( MOBILE1__c )  &lt;&gt;  13),
     TEXT(Source__c)!=&apos;KARZAA&apos;,
     RecordType.Name = &apos;Billing&apos;,
     NOT(CONTAINS(&quot;+91&quot;, MOBILE1__c)) )</errorConditionFormula>
    <errorDisplayField>MOBILE1__c</errorDisplayField>
    <errorMessage>Mobile Number must contain 10 digit except country code.</errorMessage>
</ValidationRule>