force-app/main/default/objects/AddressBook__c/validationRules/Only_billing_address_can_be_a_Primary_Ad.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_billing_address_can_be_a_Primary_Ad</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !(RecordType.Name == &quot;Billing&quot;) , Is_Primary__c )</errorConditionFormula>
    <errorDisplayField>Is_Primary__c</errorDisplayField>
    <errorMessage>You can only select Billing Address as a Primary Address.</errorMessage>
</ValidationRule>