force-app/main/default/objects/AddressBook__c/validationRules/Shipping_Account_can_only_have_shipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Account_can_only_have_shipping</fullName>
    <active>true</active>
    <description>Shipping Account can only have shipping address</description>
    <errorConditionFormula>AND(Customer__r.RecordType.Name =&apos;Shipping&apos;,
NOT(RecordType.Name =&apos;Shipping&apos;))</errorConditionFormula>
    <errorMessage>Shipping Account can only have Shipping Address.</errorMessage>
</ValidationRule>