force-app/main/default/objects/AddressBook__c/validationRules/You_can_only_select_Billing_Address_as_a.validationRule-meta.xml
<ValidationRule>
    <fullName>You_can_only_select_Billing_Address_as_a</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  !(RecordType.Name == &quot;Billing&quot;) , Is_Primary__c )</errorConditionFormula>
    <errorDisplayField>Is_Primary__c</errorDisplayField>
    <errorMessage>You can only select Billing Address as a Primary Address.</errorMessage>
</ValidationRule>