force-app/main/default/objects/AddressBook__c/listViews/Cancelled_Delivery.listView-meta.xml
<ListView>
    <fullName>Cancelled_Delivery</fullName>
    <columns>NAME</columns>
    <columns>Address_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>CITY__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>CITY_AREA__c</columns>
    <columns>STATE__c</columns>
    <columns>PINCODE__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled - Delivery</label>
    <sharedTo>
        <group>TMS_Branch_Managers</group>
        <group>TMS_Managers</group>
    </sharedTo>
</ListView>