force-app/main/default/objects/AddressBook__c/listViews/Copy_of_All_Bangalore.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Bangalore</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>CITY__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>CITY_AREA__c</columns>
    <columns>STATE__c</columns>
    <columns>TRADE_NAME__c</columns>
    <columns>PINCODE__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pickup_Route_Number__c</columns>
    <columns>Delivery_Route_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-</label>
    <sharedTo>
        <group>BANGALORE_Hub</group>
    </sharedTo>
</ListView>