force-app/main/default/objects/AddressBook__c/listViews/My_Delivery.listView-meta.xml
<ListView>
    <fullName>My_Delivery</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Number_of_Shipment__c</columns>
    <columns>Customer__c</columns>
    <columns>ADDRESS1__c</columns>
    <columns>CITY__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Delivery_Completed__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Delivery</label>
</ListView>